# elite-rust

./: Cargo.toml  LICENSE.md
src/: lib.rs  star_system.rs
src/status/: flags.rs  mod.rs
tests/: tests.rs
tests/data/: Status.json
