[package]
name = "elite-rust"
version = "0.1.0"
authors = ["Benjamin Schubert <bschubert@ca.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
lazy_static = "1.4.0"
regex = "1.3.4"
json = "0.12.1"
